<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Layout Example</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="one">one</string>

    <string name="two">two</string>

    <string name="three">three</string>

    <string name="four">four</string>

    <string name="five">five</string>

    <string name="six">six</string>

    <string name="seven">seven</string>

    <string name="eight">eight</string>


</resources>
