<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:id="@+id/rlParentLayout">


    <TextView
        style="@style/upperTextViewStyle"

        android:text="@string/one"
        android:id="@+id/tvOne"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/upperTextViewStyle"

        android:text="@string/two"
        android:id="@+id/tvTwo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/upperTextViewStyle"

        android:text="@string/three"
        android:id="@+id/tvThree"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView

        style="@style/middleTextViewStyle"

        android:text="@string/four"
        android:id="@+id/tvfive"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/tvTwo"
        android:layout_toStartOf="@+id/tvTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView

        style="@style/middleTextViewStyle"

        android:text="@string/five"
        android:id="@+id/tvfour"
        android:layout_alignBaseline="@+id/tvfive"
        android:layout_alignBottom="@+id/tvfive"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_margin="10dp"
        style="@style/middleTextViewStyle"

        android:text="@string/six"
        android:id="@+id/tvSix"
        android:layout_alignTop="@+id/tvfour"
        android:layout_toRightOf="@+id/tvTwo"
        android:layout_toEndOf="@+id/tvTwo"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        style="@style/lowerTextViewStyle"

        android:text="@string/seven"
        android:id="@+id/tvSeven"
        android:layout_above="@+id/tvEight"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" />

    <TextView
        style="@style/footerTextViewStyle"
        android:gravity="center_horizontal"
        android:text="@string/eight"
        android:id="@+id/tvEight"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/tvThree"
        android:layout_alignEnd="@+id/tvThree"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />
</RelativeLayout>